# OPENAI-SDK

./: 02_Agents.ipynb  02_agents.ipynb  Untitled6.ipynb
01-class/explore_uv/: README.md  pyproject.toml
01-class/explore_uv/src/explore_uv/: __init__.py
01-class/hello_chainlit/: README.md  pyproject.toml
